# WebSecurity-hw2

./: .gitignore  CMakeLists.txt  README.md  genkey.sh
include/: exception.h  ssl.h  utility.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp
src/server/: CMakeLists.txt  server.cpp
